<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Caps to Ctrl</string>
    <string name="keyboard_layouts_label">Caps to Ctrl</string>
    <string name="description_html">tcen.en.html</string>

    <string name="keyboard_layout_en_std"                   >English (US)</string>
    <string name="keyboard_layout_en_std_hz"                >Japanese (EN) [`]→[H/Z]</string>

    <string name="keyboard_layout_en_std_esc_grave"         >English (US) [ESC]⇔[`]</string>
    <string name="keyboard_layout_en_std_esc_hz"            >Japanese (EN) [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_en"                       >English (US) [Caps]→[Ctrl]</string>
    <string name="keyboard_layout_en_hz"                    >Japanese (EN) [Caps]→[Ctrl] [`]→[H/Z]</string>

    <string name="keyboard_layout_en_esc_grave"             >English (US) [Caps]→[Ctrl] [ESC]⇔[`]</string>
    <string name="keyboard_layout_en_esc_hz"                >Japanese (EN) [Caps]→[Ctrl] [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_en_caps"                  >Japanese (EN) [Caps]→[H/Z]</string>
    <string name="keyboard_layout_en_esc_grave_caps"        >Japanese (EN) [Caps]→[H/Z] [ESC]⇔[`]</string>

    <string name="keyboard_layout_en_caps_ctrl"             >English (US) [Caps]⇔[Ctrl]</string>
    <string name="keyboard_layout_en_caps_ctrl_esc_grave"   >English (US) [Caps]⇔[Ctrl] [ESC]⇔[`]</string>

    <string name="keyboard_layout_en_caps_ctrl_hz"          >Japanese (EN) [Caps]⇔[Ctrl] [`]→[H/Z]</string>
    <string name="keyboard_layout_en_caps_ctrl_esc_hz"      >Japanese (EN) [Caps]⇔[Ctrl] [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_tc_en_std"                >ThumbCtrl (EN)</string>
    <string name="keyboard_layout_tc_en_std_hz"             >ThumbCtrl (EN) [`]→[H/Z]</string>

    <string name="keyboard_layout_tc_en_std_esc_grave"      >ThumbCtrl (EN) [ESC]⇔[`]</string>
    <string name="keyboard_layout_tc_en_std_esc_hz"         >ThumbCtrl (EN) [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_tc_en"                    >ThumbCtrl (EN) [Caps]→[Ctrl]</string>
    <string name="keyboard_layout_tc_en_hz"                 >ThumbCtrl (EN) [Caps]→[Ctrl] [`]→[H/Z]</string>

    <string name="keyboard_layout_tc_en_esc_grave"          >ThumbCtrl (EN) [Caps]→[Ctrl] [ESC]⇔[`]</string>
    <string name="keyboard_layout_tc_en_esc_hz"             >ThumbCtrl (EN) [Caps]→[Ctrl] [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_tc_en_caps_ctrl"          >ThumbCtrl (EN) [Caps]⇔[Ctrl]</string>
    <string name="keyboard_layout_tc_en_caps_ctrl_esc_grave">ThumbCtrl (EN) [Caps]⇔[Ctrl] [ESC]⇔[`]</string>

    <string name="keyboard_layout_tc_en_caps_ctrl_hz"       >ThumbCtrl (EN) [Caps]⇔[Ctrl] [`]→[H/Z]</string>
    <string name="keyboard_layout_tc_en_caps_ctrl_esc_hz"   >ThumbCtrl (EN) [Caps]⇔[Ctrl] [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_tc_en_caps"               >ThumbCtrl (EN) [Caps]→[H/Z]</string>
    <string name="keyboard_layout_tc_en_esc_grave_caps"     >ThumbCtrl (EN) [Caps]→[H/Z] [ESC]⇔[`]</string>

    <string name="keyboard_layout_ra_en_std"                   >English (US)</string>
    <string name="keyboard_layout_ra_en_std_hz"                >Japanese (EN) [R-Alt]→[H/Z] [`]→[H/Z]</string>

    <string name="keyboard_layout_ra_en_std_esc_grave"         >English (US) [R-Alt]→[H/Z] [ESC]⇔[`]</string>
    <string name="keyboard_layout_ra_en_std_esc_hz"            >Japanese (EN) [R-Alt]→[H/Z] [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_ra_en"                       >English (US) [R-Alt]→[H/Z] [Caps]→[Ctrl]</string>
    <string name="keyboard_layout_ra_en_hz"                    >Japanese (EN) [R-Alt]→[H/Z] [Caps]→[Ctrl] [`]→[H/Z]</string>

    <string name="keyboard_layout_ra_en_esc_grave"             >English (US) [R-Alt]→[H/Z] [Caps]→[Ctrl] [ESC]⇔[`]</string>
    <string name="keyboard_layout_ra_en_esc_hz"                >Japanese (EN) [R-Alt]→[H/Z] [Caps]→[Ctrl] [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_ra_en_caps"                  >Japanese (EN) [R-Alt]→[H/Z] [Caps]→[H/Z]</string>
    <string name="keyboard_layout_ra_en_esc_grave_caps"        >Japanese (EN) [R-Alt]→[H/Z] [Caps]→[H/Z] [ESC]⇔[`]</string>

    <string name="keyboard_layout_ra_en_caps_ctrl"             >English (US) [R-Alt]→[H/Z] [Caps]⇔[Ctrl]</string>
    <string name="keyboard_layout_ra_en_caps_ctrl_esc_grave"   >English (US) [R-Alt]→[H/Z] [Caps]⇔[Ctrl] [ESC]⇔[`]</string>

    <string name="keyboard_layout_ra_en_caps_ctrl_hz"          >Japanese (EN) [R-Alt]→[H/Z] [Caps]⇔[Ctrl] [`]→[H/Z]</string>
    <string name="keyboard_layout_ra_en_caps_ctrl_esc_hz"      >Japanese (EN) [R-Alt]→[H/Z] [Caps]⇔[Ctrl] [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_ra_tc_en_std"                >ThumbCtrl (EN)</string>
    <string name="keyboard_layout_ra_tc_en_std_hz"             >ThumbCtrl (EN) [R-Alt]→[H/Z] [`]→[H/Z]</string>

    <string name="keyboard_layout_ra_tc_en_std_esc_grave"      >ThumbCtrl (EN) [R-Alt]→[H/Z] [ESC]⇔[`]</string>
    <string name="keyboard_layout_ra_tc_en_std_esc_hz"         >ThumbCtrl (EN) [R-Alt]→[H/Z] [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_ra_tc_en"                    >ThumbCtrl (EN) [R-Alt]→[H/Z] [Caps]→[Ctrl]</string>
    <string name="keyboard_layout_ra_tc_en_hz"                 >ThumbCtrl (EN) [R-Alt]→[H/Z] [Caps]→[Ctrl] [`]→[H/Z]</string>

    <string name="keyboard_layout_ra_tc_en_esc_grave"          >ThumbCtrl (EN) [R-Alt]→[H/Z] [Caps]→[Ctrl] [ESC]⇔[`]</string>
    <string name="keyboard_layout_ra_tc_en_esc_hz"             >ThumbCtrl (EN) [R-Alt]→[H/Z] [Caps]→[Ctrl] [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_ra_tc_en_caps_ctrl"          >ThumbCtrl (EN) [R-Alt]→[H/Z] [Caps]⇔[Ctrl]</string>
    <string name="keyboard_layout_ra_tc_en_caps_ctrl_esc_grave">ThumbCtrl (EN) [R-Alt]→[H/Z] [Caps]⇔[Ctrl] [ESC]⇔[`]</string>

    <string name="keyboard_layout_ra_tc_en_caps_ctrl_hz"       >ThumbCtrl (EN) [R-Alt]→[H/Z] [Caps]⇔[Ctrl] [`]→[H/Z]</string>
    <string name="keyboard_layout_ra_tc_en_caps_ctrl_esc_hz"   >ThumbCtrl (EN) [R-Alt]→[H/Z] [Caps]⇔[Ctrl] [ESC]⇔[H/Z]</string>

    <string name="keyboard_layout_ra_tc_en_caps"               >ThumbCtrl (EN) [R-Alt]→[H/Z] [Caps]→[H/Z]</string>
    <string name="keyboard_layout_ra_tc_en_esc_grave_caps"     >ThumbCtrl (EN) [R-Alt]→[H/Z] [Caps]→[H/Z] [ESC]⇔[`]</string>
</resources>
